fixed nav bar logo stretched problem in dashboard views

--- a/public/css/local-styles/admin-dashboard.css
+++ b/public/css/local-styles/admin-dashboard.css
@@ -46,7 +46,7 @@ body {
     background-color: white;
 }
 
-img {
+.card-icon-img {
     width: 60px;
     height: 60px;
 }
